--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 html {
     box-sizing: border-box;
     font-size: 16px;
+    font-family: 'Roboto', sans-serif;
 }
 
 *, *:before, *:after {
@@ -23,3 +24,134 @@ img {
     height: auto;
 }
 
+/* Style goes Here */
+
+/* center all the content */
+body {
+    display: flex;
+    justify-content: center;
+    background-color: rgb(234, 234, 234);
+}
+
+
+.container {
+    display: flex;
+}
+
+.left-side img {
+    height: 100vh;
+}
+
+.left-side {
+    position: relative;
+    width: 30vw;
+}
+
+.logo {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.54);
+    top: 20%;
+    height: 20vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.logo img {
+    width: 6vw;
+    height: auto;
+    margin-right: 10px;
+}
+
+.logo p {
+    color: white;
+    font-size: 7vw;
+}
+
+/* Right Side */
+.text-content {
+    font-size: 40px;
+
+}
+
+.right-side {
+    /* width: 50vw; */
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin: 15vh 0;
+}
+
+.container-right > p {
+    margin-top: 2vh;
+    margin-left: 2vw;
+}
+
+.container-right {
+    width: 50vw;
+}
+
+.main-form {
+    margin-top: 20px;
+    margin-bottom: 40px;
+    background-color: white;
+    padding: 25px 50px;
+    box-shadow: 0 8px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 0 10px 10px 0;
+}
+
+.main-form>h1 {
+    margin-bottom: 35px;
+}
+
+form {
+    display: flex;
+    gap: 20px;
+}
+
+.form-1 input, .form-2 input {
+    display: block;
+    width: 13vw;
+}
+
+label {
+    font-size: 16px;
+    text-transform: uppercase;
+
+}
+
+.text-content {
+    margin-left: 2vw;
+}
+
+.text-content>p:nth-child(2) {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+input {
+    height: 2.9vh;
+    border-radius: 5px;
+    border: 0.5px solid rgba(127, 127, 127, 0.247);
+    margin-top: 5px;
+    margin-bottom: 25px;
+}
+
+button {
+    margin-left: 2vw;
+    width: 10vw;
+    height: 4vh;
+    font-size: 15px;
+    font-weight: 500;
+    color: white;
+    background-color: #596D48;
+    border-radius: 5px;
+    border: none;
+    box-shadow: 2px 3px 7px #596d4851;
+}
+
+button:hover {
+    opacity: 0.8;
+    cursor: pointer;
+}
