--- a/style.css
+++ b/style.css
@@ -157,6 +157,7 @@ button:hover {
     cursor: pointer;
 }
 
-/* input:invalid {
-    border: 1px solid red;
-} */
+input:focus {
+    border: 0.5px solid rgba(0, 98, 255, 0.713);
+    box-shadow: 3px 5px 7px rgba(0, 0, 0, 0.146);
+}
